--- a/theme/style.css
+++ b/theme/style.css
@@ -73,7 +73,7 @@ Imports
 ---------------------------------------------------------------------------------------------------- */
 
 @import url(//fonts.googleapis.com/css?family=Lato:300,700);
-
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,700);
 
 /*
 HTML5 Reset
@@ -144,9 +144,9 @@ html {
 }
 
 body {
-	background-color: #f5f5f5;
-	color: #666;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	background-color: #666666;
+	color: #fefefe;
+	font-family: 'Helvetica Neue', Verdana, sans-serif;
 	font-size: 16px;
 	font-size: 1.6rem;
 	font-weight: 300;
@@ -248,7 +248,7 @@ h4,
 h5,
 h6 {
 	color: #333;
-	font-family: Lato, sans-serif;
+	font-family: "Lato", sans-serif;
 	font-weight: 700;
 	line-height: 1.2;
 	margin: 0 0 16px;
@@ -834,12 +834,7 @@ Site Header
 ---------------------------------------------------------------------------------------------------- */
 
 .site-header {
-	background-color: #fff;
-}
-
-.site-header .wrap {
-	padding: 40px 0;
-	padding: 4rem 0;
+	background-color: #fefefe;
 }
 
 /* Title Area
@@ -849,8 +844,8 @@ Site Header
 	float: left;
 	font-family: Lato, sans-serif;
 	font-weight: 700;
-	padding: 16px 0;
-	padding: 1.6rem 0;
+	padding: 8px 0;
+	padding: 0.8rem 0;
 	width: 320px;
 }
 
@@ -859,11 +854,11 @@ Site Header
 }
 
 .site-title {
-	font-size: 28px;
-	font-size: 2.8rem;
+	font-size: 70px;
+	font-size: 7rem;
 	line-height: 1;
-	margin: 0 0 8px;
-	margin: 0 0 0.8rem;
+	margin: 0px;
+	margin: 0rem;
 }
 
 .site-title a,
@@ -1403,8 +1398,7 @@ Site Footer
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-	background-color: #fff;
-	color: #999;
+	color: #fefefe;
 	font-size: 14px;
 	font-size: 1.4rem;
 	padding: 40px 0;
@@ -1413,7 +1407,8 @@ Site Footer
 }
 
 .site-footer a {
-	border-bottom: 1px solid #ddd;
+    color: #fefefe;
+	border-bottom: 1px solid #666666;
 }
 
 .site-footer p {
@@ -1595,4 +1590,17 @@ Media Queries
 		width: 100%;
 	}
 
+}
+
+
+/* ultramarin */
+
+h1.site-title a {
+    color: #333333;
+    font-weight: normal;
+    letter-spacing: -5px;
+}
+
+span.um-title {
+    font-weight: bold;
 }
