--- a/theme/style.css
+++ b/theme/style.css
@@ -423,8 +423,8 @@ Structure and Layout
 
 .site-inner {
 	clear: both;
-	padding-top: 10px;
-	padding-top: 1rem;
+	padding-top: 30px;
+	padding-top: 3rem;
 }
 
 /* Column Widths and Positions
@@ -893,13 +893,15 @@ Site Header
 /* Logo, hide text */
 
 .header-image .site-header .wrap {
-	background: url(images/logo.png) no-repeat left;
+	background: url(/ultramarin-logo.jpg) no-repeat;
+    background-position: 198px;
+    background-position: 19.8rem;
 	padding: 0;
 }
 
 .header-image .site-title a {
 	float: left;
-	min-height: 164px;
+	min-height: 84px;
 	width: 100%;
 }
 
@@ -1081,8 +1083,8 @@ Content Area
 	border-radius: 3px;
 	margin-bottom: 40px;
 	margin-bottom: 4rem;
-	padding: 0px 40px 24px;
-	padding: 0rem 4rem 2.4rem;
+	padding: 0px 18px 24px;
+	padding: 0rem 1.8rem 2.4rem;
 }
 
 .entry-content a {
@@ -1430,7 +1432,6 @@ Media Queries
 
 	.header-image .site-header .wrap {
 		background: url(images/logo@2x.png) no-repeat left;
-		background-size: 320px 164px;
 	}
 
 }
@@ -1619,7 +1620,11 @@ li.menu-item-home a {
     color: #333333 !important;
 }
 
-li.menu-item-type-custom {
+ul#menu-sidehome li a {
+    color: #333333 !important;
+}
+
+li.menu-item-type-custom, ul#menu-sidehome li {
     text-align: right;
 }
 
@@ -1631,10 +1636,21 @@ footer.entry-footer {
     display: none;
 }
 
+.ngg-singlepic {
+    padding: 5px 0 0 !important;
+    padding: 0.5rem 0 0 !important;
+    background-color: transparent !important;
+}
+
 p.entry-permalink {
     display: none;
 }
 
 .wrap ul.menu-primary {
     margin-left: 174px;
+}
+
+iframe {
+    margin: 0;
+    padding: 0;
 }
